# stella

./: .gitignore  CMakeLists.txt  README.md  cedar_util.py  config.json  diffop.py  metric.py  nested.txt  order.py  test.py  test_cedar.py  vis_basis.py
app/: CMakeLists.txt  test.cc
data/: h.txt  norm.txt
include/stella/: grid.h  halo.h  metrics.h  op.h  solver.h  types.h  vtkwriter.h
include/stella/bc/: dirichlet.h
src/: CMakeLists.txt  grid.cc  metrics.cc  op.cc
src/bc/: dirichlet.cc
